fix navbar spacing for small phones

--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -105,5 +105,13 @@
 @media screen and (max-width: 600px) {
     .navbar{
         width: 70%;
+
+        .nav{
+            top:20%
+        }
+
+        .contact{
+            bottom: 20%;
+        }
     }
   }
